<resources>
    <string name="app_name">Eutch</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="forgotten_password"><u>Forgotten password?</u></string>
    <string name="sing_up"><u>sing up</u></string>
    <string name="sing_in"><u>sing in</u></string>
    <string name="login_text">login</string>
    <string name="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod.</string>
    <string name="cart">Cart</string>
    <string name="clear_all">Clear all</string>
    <string name="meals">Meals</string>
    <string name="delivery_fees">Delivery fees</string>
    <string name="total">Total</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="checkout">Checkout</string>
    <string name="note_for_cook">Note for the cook</string>
    <string name="note">Note (optional)</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="almost_done">You’re almost done</string>
    <string name="enter_address_delivery">Please enter the address of delivery</string>
    <string name="delivery_note">Delivery note (optional)</string>
    <string name="feedback">Feedback</string>
    <string name="experience">Your experience (optional)</string>
    <string name="rate">Rate</string>
    <string name="back">Back</string>
    <string name="order_now">Order now</string>
    <string name="orders">Orders</string>
    <string name="order">Order</string>
    <string name="in_progress">• In progress</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="restaurants">Restaurants</string>
    <string name="logout">Déconnexion</string>
    <string name="deliverer_information">Deliverer information</string>
    <string name="last_name">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="telephone">Téléphone</string>
    <string name="restaurants_cap">Restaurants</string>
    <string name="orders_cap">Orders</string>
    <string name="settings_cap">Settings</string>
    <string name="open">Open</string>
    <string name="add_to_cart">Add to cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="web_client_id">920300760290-1s2qa3jh0ihsni89gkecg4rpbc233hol.apps.googleusercontent.com</string>
    <string name="error">Couldn\'t load data please check your internet connection</string>
    <string name="Orders">Orders</string>
    <string name="reset">Reset</string>
    <string name="confirm">Confirm</string>
    <string name="skip">Skip</string>
    <string name="add_an_avatar">Add an avatar</string>
    <string name="Login">Login</string>
    <string name="rate_this_restaurant">Rate this restaurant</string>
    <string name="sign_up">Sign up</string>
    <string name="Rating">Rating</string>
    <string name="no_orders_to_display">No orders to display</string>
    <string name="continue_with_google">Continue with google</string>
</resources>