<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn ="navigation_view"
    android:id="@+id/drawer">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/restaurantsFragment"
            android:icon="@drawable/baseline_restaurant_24"
            android:title="@string/restaurants_cap" />
        <item
            android:id="@+id/ordersFragment"
            android:icon="@drawable/baseline_pending_24"
            android:title="@string/Orders" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings_cap" />
        <item
            android:id="@+id/logoutBtn"
            android:icon="@drawable/logout"
            android:title="Logout" />

    </group>

</menu>