<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AvatarActivity">

    <TextView
        android:id="@+id/avatar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/add_an_avatar"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="302dp"
        android:layout_height="293dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/image_container"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/picker" />

    <Button
        android:id="@+id/skip"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="@drawable/secondary_btn"
        android:padding="8dp"
        android:text="@string/skip"
        android:textAppearance="@style/TextAppearance.App.H6"
        android:textColor="@color/main_color"
        android:textFontWeight="600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/secondary_btn"
            android:padding="8dp"
            android:text="@string/reset"
            android:textAppearance="@style/TextAppearance.App.H6"
            android:textColor="@color/main_color"
            android:textFontWeight="600" />

        <Space
            android:layout_width="16dp"
            android:layout_height="0dp"></Space>

        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/action_btn"
            android:fontFamily="@font/poppins"
            android:padding="8dp"
            android:text="@string/confirm"
            android:textAppearance="@style/TextAppearance.App.H6"
            android:textColor="@color/white"
            android:textFontWeight="600" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>