<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle_top_rounded"
    tools:context=".fragments.RatingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_top_rounded"
        android:paddingHorizontal="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/rate_this_restaurant"
            android:textAppearance="@style/TextAppearance.App.H4"
            android:textColor="@color/main_color"
            android:textFontWeight="600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cross_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:rotation="45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/add"
            app:tint="@color/main_color" />

        <TextView
            android:id="@+id/experience_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/experience"
            android:textAppearance="@style/TextAppearance.App.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <EditText
            android:id="@+id/experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/edittext"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLines="3"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/experience_text" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/experience"
            tools:layout_editor_absoluteX="24dp">

            <Button
                android:id="@+id/close_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/secondary_btn"
                android:padding="8dp"
                android:text="@string/close"
                android:textAppearance="@style/TextAppearance.App.H6"
                android:textColor="@color/main_color"
                android:textFontWeight="600" />

            <Space
                android:layout_width="16dp"
                android:layout_height="0dp"></Space>

            <Button
                android:id="@+id/rate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/action_btn"
                android:fontFamily="@font/poppins"
                android:padding="8dp"
                android:text="@string/rate"
                android:textAppearance="@style/TextAppearance.App.H6"
                android:textColor="@color/white"
                android:textFontWeight="600" />
        </LinearLayout>

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:isIndicator="false"
            android:progressTint="@color/golden"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>