<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_layout_cart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        tools:context=".activities.CartActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/clearAllBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/poppins"
            android:text="@string/clear_all"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.App.Body2"
            android:textColor="@color/main_color"
            android:textFontWeight="500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/separator"
            app:layout_constraintBottom_toTopOf="@+id/totalCartLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/totalCartLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="24dp"
            android:text="@string/total"
            android:textAppearance="@style/TextAppearance.App.H6"
            android:textColor="@color/main_color"
            android:textFontWeight="600"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/totalCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:gravity="end"
            android:textAppearance="@style/TextAppearance.App.H6"
            android:textColor="@color/main_color"
            android:textFontWeight="600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/add_note_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/secondary_btn"
                android:padding="8dp"
                android:text="@string/add_note"
                android:textAppearance="@style/TextAppearance.App.H6"
                android:textColor="@color/main_color"
                android:textFontWeight="600" />

            <Space
                android:layout_width="16dp"
                android:layout_height="0dp"></Space>

            <Button
                android:id="@+id/checkout_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/action_btn"
                android:fontFamily="@font/poppins"
                android:padding="8dp"
                android:text="@string/checkout"
                android:textAppearance="@style/TextAppearance.App.H6"
                android:textColor="@color/white"
                android:textFontWeight="600" />
        </LinearLayout>

        <TextView
            android:id="@+id/orderDateCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/delivery_fees"
            android:textAppearance="@style/TextAppearance.App.Body2"
            android:textColor="@color/text_color"
            android:textFontWeight="400"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/poppins"
            android:text="@string/meals"
            android:textAppearance="@style/TextAppearance.App.Body2"
            android:textColor="@color/text_color"
            android:textFontWeight="400"
            app:layout_constraintBottom_toTopOf="@+id/orderDateCard"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/mealsPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/poppins"
            android:text="0 DZD"
            android:textAppearance="@style/TextAppearance.App.Body2"
            android:textColor="@color/text_color"
            android:textFontWeight="400"
            app:layout_constraintBottom_toTopOf="@+id/orderDateCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView11" />

        <TextView
            android:id="@+id/deliveryFeesPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/poppins"
            android:text="0 DZD"
            android:textAppearance="@style/TextAppearance.App.Body2"
            android:textColor="@color/text_color"
            android:textFontWeight="400"
            app:layout_constraintBottom_toBottomOf="@+id/orderDateCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/orderDateCard" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cartRecyclerView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>